Implémentation des premières étapes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <script type="text/x-handlebars" data-template-name="application">
     <header>
-        {{#linkTo index}}&lt; Xebia / JS &gt;{{/linkTo}}
+        {{#linkTo index}}Xebia / JS{{/linkTo}}
     </header>
     {{outlet}}
 </script>
