Update tutorial pour l'affichage de la liste

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <div id="content">
 
-        <table id="hor-zebra" summary="Access logs">
+        <table>
             <thead>
             <tr>
                 <th>Path</th>
