--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </tr>
             </thead>
             <tbody>
-            {{#each log in content}}
+            {{#each log in filteredLogs}}
             <tr>
                 <td>{{#linkTo detail log}}{{log.path}}{{/linkTo}}</td>
                 <td>{{log.method}}</td>
