--- a/tutorial.html
+++ b/tutorial.html
@@ -174,44 +174,72 @@ App = Ember.Application.create({
     </div>
     &lt;/script>
 </script>
-<!--
 
 
-
-<script type="text/x-handlebars" data-template-name="tutorial-solution-list">
-
-</script>
 
 <script type="text/x-handlebars" data-template-name="tutorial-step-computed">
-    <p>Plutôt que d'afficher simplement la liste des prénoms, nous allons maintenant afficher la liste des noms complet (prénom et nom) des poneys.
+    <p>Nous allons maintenant afficher le chemin (path) et la méthode de chaque log.
         Pour cela, nous allons déclarer
-    une propriété calculé <code>name</code> dans la classe <code>App.Pony</code>.
+        2 propriétés calculées <code>path</code> et <code>method</code> dans la classe <code>App.Log</code>.
         Les <a target="_blank" href="http://emberjs.com/guides/object-model/computed-properties/">propriétés calculées</a>
         sont des propriétés accessibles sur les objets Ember, dont la valeur est dépendante d'autres propriétés du même objet.
     </p>
-    <p>La propriété calculée name doit être la concaténation du prénom et du nom, séparés par un espace.
-        Afficher ensuite cette propriété à la place du prénom dans la liste des poneys.</p>
+    <p>La propriété calculée <code>path</code> doit être le chemin présent dans la request.
+        La propriété calculée <code>method</code> doit être le verbe HTTP présent dans la request.
+        Afficher ensuite ces propriétés dans le tableau des logs.</p>
 </script>
 
 <script type="text/x-handlebars" data-template-name="tutorial-solution-computed">
-App.Pony = DS.Model.extend({
-    firstName: DS.attr('string'),
-    lastName: DS.attr('string'),
-    color: DS.attr('string'),
-    type: DS.attr('string'),
-    name: function () {
-       return this.get('firstName') + ' ' + this.get('lastName');
-    }.property('firstName', 'lastName')
-});
 
-&lt;script type="text/x-handlebars" data-template-name="index">
-<ul>
-    \{{#each poney in content}}
-    <li>\{{poney.name}}</li>
-    \{{/each}}
-</ul>
-&lt;/script>
+    App.Log = DS.Model.extend({
+        host: DS.attr('string'),
+        date: DS.attr('string'),
+        request: DS.attr('string'),
+        status: DS.attr('string'),
+        size: DS.attr('number'),
+        useragent: DS.attr('string'),
+
+        path: function () {
+        var parts = this.get('request').split(' ');
+        return parts[1];
+        }.property('request'),
+        method: function () {
+        var parts = this.get('request').split(' ');
+        return parts[0];
+        }.property('request')
+    });
+
+    &lt;script type="text/x-handlebars" data-template-name="index">
+    <div id="content">
+
+        <table>
+            <thead>
+            <tr>
+                <th>Path</th>
+                <th>Method</th>
+                <th>Status</th>
+                <th>Size</th>
+                <th>Time</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each log in content}}
+            <tr>
+                <td>{{log.path}}</td>
+                <td>{{log.method}}</td>
+                <td>{{log.status}}</td>
+                <td>{{log.size}}</td>
+                <td>{{log.date}}</td>
+            </tr>
+            {{/each}}
+            </tbody>
+        </table>
+    </div>
+    &lt;/script>
 </script>
+<!--
+
+
 
 <script type="text/x-handlebars" data-template-name="tutorial-step-consultation">
     <p>Nous allons maintenant créer une page de consultation pour chaque poney.
