--- a/tutorial.html
+++ b/tutorial.html
@@ -286,46 +286,71 @@ App = Ember.Application.create({
     &lt;/script>
 
 </script>
+
+
+<script type="text/x-handlebars" data-template-name="tutorial-step-consultation">
+    <p>Nous allons maintenant créer une page de consultation du détail de chaque log.
+        Pour cela, nous allons devoir créer une route, un template correspondant à la page de consultation
+        et un lien pour atteindre cette page.</p>
+
+    <p> Tout d'abord, nous allons créer une route nommée <code>detail</code>, ayant pour path <code>/log/:log_id</code>. </p>
+    <a target="_blank" href="http://emberjs.com/guides/routing/defining-your-routes/">Déclaration d'une route</a>
+    <p>Par convention, Ember cherche un template correspondant au nom de la route pour l'insérer dans l'outlet du template <code>application</code>. Par ailleurs, toujours par convention,
+        Ember appelle la méthode <code>App.Log.find(log_id)</code> si le paramètre de <code>path</code> se nomme <code>log_id</code>.
+        Nous n'avons donc ici pas besoin de définir de route pour charger le modèle.</p>
+
+    <p>Définissez ensuite un template nommé <code>detail</code>, dans lequel vous afficherez le user agent du log choisi.</p>
+
+    <p>Enfin, utilisez le helper <a target="_blank" href="http://emberjs.com/guides/templates/links/">linkTo</a> pour créer un lien vers le détail depuis la liste des logs.
+       Attention, un lien <code>linkTo</code> doit toujours prendre en paramètre le même type que le type renvoyé par la méthode <code>model</code> de la route vers laquelle on redirige.
+       Ici, on passera donc le log, et pas l'identifiant du log.
+
+    </p>
+</script>
+
+<script type="text/x-handlebars" data-template-name="tutorial-solution-consultation">
+    App.Router.map(function () {
+        this.route('detail', {path: 'log/:log_id'});
+    });
+
+    &lt;script type="text/x-handlebars" data-template-name="detail">
+        User agent: {{content.useragent}}
+    &lt;/script>
+
+    &lt;script type="text/x-handlebars" data-template-name="index">
+    <div id="content">
+
+        <table>
+            <thead>
+            <tr>
+                <th>Path</th>
+                <th>Method</th>
+                <th>Status</th>
+                <th>Size</th>
+                <th>Time</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each log in filteredLogs}}
+            <tr>
+                <td>{{#linkTo detail log}}{{log.path}}{{/linkTo}}</td>
+                <td>{{log.method}}</td>
+                <td>{{log.status}}</td>
+                <td>{{size log.size}}</td>
+                <td>{{log.date}}</td>
+            </tr>
+            {{/each}}
+            </tbody>
+        </table>
+    </div>
+    &lt;/script>
+
+</script>
+
 <!--
 
 
 
-<script type="text/x-handlebars" data-template-name="tutorial-step-consultation">
-    <p>Nous allons maintenant créer une page de consultation pour chaque poney.
-        Pour cela, nous allons devoir créer une route, un template correspondant à la page de consultation
-        et un lien pour atteindre cette page.</p>
-
-    <p> Tout d'abord, nous allons créer une route nommée <code>detail</code>, ayant pour path <code>/pony/:pony_id</code>. </p>
-    <a target="_blank" href="http://emberjs.com/guides/routing/defining-your-routes/">Déclaration d'une route</a>
-    <p>Par convention, Ember cherche un template correspondant au nom de la route pour l'insérer dans l'outlet du template <code>application</code>. Par ailleurs, toujours par convention,
-        Ember appelle la méthode <code>App.Pony.find(pony_id)</code> si le paramètre de <code>path</code> se nomme <code>pony_id</code>.
-        Nous n'avons donc ici pas besoin de définir de route pour charger le modèle.</p>
-
-    <p>Définissez ensuite un template nommé <code>detail</code>, dans lequel vous afficherez le nom complet, le type et la couleur du poney choisi.</p>
-
-    <p>Enfin, utilisez le helper <a target="_blank" href="http://emberjs.com/guides/templates/links/">linkTo</a> pour créer un lien vers le détail depuis la liste des poneys. </p>
-</script>
-
-<script type="text/x-handlebars" data-template-name="tutorial-solution-consultation">
-App.Router.map(function () {
-  this.route('detail', {path: 'pony/:pony_id'});
-});
-
-&lt;script type="text/x-handlebars" data-template-name="detail">
-    <span>Name: \{{content.name}}</span><br/>
-    <span>Color: \{{content.color}}</span><br/>
-    <span>Type: \{{content.type}}</span><br/>
-&lt;/script>
-
-&lt;script type="text/x-handlebars" data-template-name="index">
-<ul>
-    \{{#each poney in content}}
-    <li>\{{#linkTo detail poney}}\{{poney.name}}\{{/linkTo}}</li>
-    \{{/each}}
-</ul>
-&lt;/script>
-
-</script>
 
 <script type="text/x-handlebars" data-template-name="tutorial-step-home">
     <p>Créez maintenant un lien sur le titre de l'application pour retourner à la home page. Par convention, la home page se nomme <code>index</code>.</p>
