--- a/tutorial.html
+++ b/tutorial.html
@@ -429,14 +429,252 @@ App = Ember.Application.create({
 <script type="text/x-handlebars" data-template-name="tutorial-step-status">
 </script>
 <script type="text/x-handlebars" data-template-name="tutorial-solution-status">
+    App.IndexController = Ember.ArrayController.extend({
+
+    searchTerm: '',
+    statuses: [
+        {code: 200, checked: true},
+        {code: 201, checked: true},
+        {code: 304, checked: true},
+        {code: 400, checked: true},
+        {code: 403, checked: true},
+        {code: 404, checked: true},
+        {code: 500, checked: true}
+    ],
+
+    filteredLogs: function () {
+        var isChecked = function (el) {
+            return el.checked;
+        };
+
+        var getCode = function (el) {
+            return el.code;
+        };
+
+        var methods = this.get('methods').filter(isChecked).map(getCode);
+        var statuses = this.get('statuses').filter(isChecked).map(getCode);
+        var searchTerm = this.get('searchTerm').trim();
+
+        return this.get('content').filter(function (log) {
+            return statuses.indexOf(log.get('status')) != -1;
+        }).filter(function (log) {
+            return searchTerm == '' || log.get('path').indexOf(searchTerm) != -1
+        });
+    }.property('content.@each', 'statuses.@each.checked', 'searchTerm')
+
+
+    });
+
+
+
+    &lt;script type="text/x-handlebars" data-template-name="index">
+    <div class="top">
+        <div>{{input type="search" value=searchTerm}}</div>
+    </div>
+    <div id="navigation">
+
+        <div>HTTP status</div>
+        <ul>
+            {{#each status in statuses}}
+            <li>
+                {{input type="checkbox" checked=status.checked}}
+                <label {{bindAttr for=status.code}}>{{status.code}}</label>
+            </li>
+            {{/each}}
+        </ul>
+
+    </div>
+    <div id="content">
+
+        <table>
+            <thead>
+            <tr>
+                <th>Path</th>
+                <th>Method</th>
+                <th>Status</th>
+                <th>Size</th>
+                <th>Time</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each log in filteredLogs}}
+            <tr>
+                <td>{{#linkTo detail log}}{{log.path}}{{/linkTo}}</td>
+                <td>{{log.method}}</td>
+                <td>{{log.status}}</td>
+                <td>{{size log.size}}</td>
+                <td>{{log.date}}</td>
+            </tr>
+            {{/each}}
+            </tbody>
+        </table>
+    </div>
+    &lt;/script>
+
+
 </script>
 <script type="text/x-handlebars" data-template-name="tutorial-step-method">
 </script>
 <script type="text/x-handlebars" data-template-name="tutorial-solution-method">
+
+    App.IndexController = Ember.ArrayController.extend({
+
+        searchTerm: '',
+        statuses: [
+            {code: 200, checked: true},
+            {code: 201, checked: true},
+            {code: 304, checked: true},
+            {code: 400, checked: true},
+            {code: 403, checked: true},
+            {code: 404, checked: true},
+            {code: 500, checked: true}
+        ],
+        methods: [
+            {code: "PUT", checked: true},
+            {code: 'DELETE', checked: true},
+            {code: "POST", checked: true},
+            {code: 'GET', checked: true}
+        ],
+
+        filteredLogs: function () {
+            var isChecked = function (el) {
+                return el.checked;
+            };
+
+            var getCode = function (el) {
+                return el.code;
+            };
+
+            var methods = this.get('methods').filter(isChecked).map(getCode);
+            var statuses = this.get('statuses').filter(isChecked).map(getCode);
+            var searchTerm = this.get('searchTerm').trim();
+
+            return this.get('content').filter(function (log) {
+                return statuses.indexOf(log.get('status')) != -1;
+            }).filter(function (log) {
+                return methods.indexOf(log.get('method')) != -1;
+            }).filter(function (log) {
+                return searchTerm == '' || log.get('path').indexOf(searchTerm) != -1
+            });
+        }.property('content.@each', 'methods.@each.checked', 'statuses.@each.checked', 'searchTerm')
+    });
+
+    &lt;script type="text/x-handlebars" data-template-name="index">
+    <div class="top">
+        <div>{{input type="search" value=searchTerm}}</div>
+    </div>
+    <div id="navigation">
+
+        <div>HTTP status</div>
+        <ul>
+            {{#each status in statuses}}
+            <li>
+                {{input type="checkbox" checked=status.checked}}
+                <label {{bindAttr for=status.code}}>{{status.code}}</label>
+            </li>
+            {{/each}}
+        </ul>
+        <br>
+
+        <div>HTTP type</div>
+        <ul>
+            {{#each method in methods }}
+
+            <li>
+                {{input type="checkbox" checked=method.checked}}
+                <label {{bindAttr for=method.code}}>{{method.code}}</label>
+            </li>
+            {{/each}}
+        </ul>
+    </div>
+    <div id="content">
+
+        <table>
+            <thead>
+            <tr>
+                <th>Path</th>
+                <th>Method</th>
+                <th>Status</th>
+                <th>Size</th>
+                <th>Time</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each log in filteredLogs}}
+            <tr>
+                <td>{{#linkTo detail log}}{{log.path}}{{/linkTo}}</td>
+                <td>{{log.method}}</td>
+                <td>{{log.status}}</td>
+                <td>{{size log.size}}</td>
+                <td>{{log.date}}</td>
+            </tr>
+            {{/each}}
+            </tbody>
+        </table>
+    </div>
+    &lt;/script>
 </script>
 <script type="text/x-handlebars" data-template-name="tutorial-step-empty-list">
 </script>
 <script type="text/x-handlebars" data-template-name="tutorial-solution-empty-list">
+    &lt;script type="text/x-handlebars" data-template-name="index">
+    <div class="top">
+        <div>{{input type="search" value=searchTerm}}</div>
+    </div>
+    <div id="navigation">
+
+        <div>HTTP status</div>
+        <ul>
+            {{#each status in statuses}}
+            <li>
+                {{input type="checkbox" checked=status.checked}}
+                <label {{bindAttr for=status.code}}>{{status.code}}</label>
+            </li>
+            {{/each}}
+        </ul>
+        <br>
+
+        <div>HTTP type</div>
+        <ul>
+            {{#each method in methods }}
+
+            <li>
+                {{input type="checkbox" checked=method.checked}}
+                <label {{bindAttr for=method.code}}>{{method.code}}</label>
+            </li>
+            {{/each}}
+        </ul>
+    </div>
+    <div id="content">
+
+        <table>
+            <thead>
+            <tr>
+                <th>Path</th>
+                <th>Method</th>
+                <th>Status</th>
+                <th>Size</th>
+                <th>Time</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each log in filteredLogs}}
+            <tr>
+                <td>{{#linkTo detail log}}{{log.path}}{{/linkTo}}</td>
+                <td>{{log.method}}</td>
+                <td>{{log.status}}</td>
+                <td>{{size log.size}}</td>
+                <td>{{log.date}}</td>
+            </tr>
+            {{else}}
+            <tr>
+                <td colspan="5">NO RESULTS</td>
+            </tr>
+            {{/each}}
+            </tbody>
+        </table>
+    </div>
+    &lt;/script>
 </script>
 
 <!--
