Correction css highlighter

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <link href="css/main.less" rel="stylesheet" type="text/less">
+    <link href="css/vendor/shCore.css" rel="stylesheet" type="text/less">
+    <link href="css/vendor/shThemeDefault.css" rel="stylesheet" type="text/less">
 </head>
 <body>
 
