--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link href="css/main.less" rel="stylesheet" type="text/less">
+    <link href="css/vendor/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
     <link href="css/vendor/shCore.css" rel="stylesheet" type="text/less">
     <link href="css/vendor/shThemeDefault.css" rel="stylesheet" type="text/less">
 </head>
